Implemented theme change button and did a fex fixes

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
                   <div class="home_information">
                     <span class="home_information">
-                      <i class="bx bx-map home_icon"></i> Na Zaspe 2D/12, 80546 Gdańsk, Poland
+                      <i class="bx bx-map home_icon"></i> Na Zaspe 2D/12, 80-546 Gdansk, Poland
                     </span>
                   </div>
 
@@ -43,6 +43,8 @@
                       <i class="bx bx-phone home_icon"></i><a href="tel:+358408467556">+358 40 8467556</a>
                     </span>
                   </div>
+
+                  <i class="bx bx-moon change-theme" title="Theme" id="theme-button"></i>
 
                 </section>
 
@@ -73,8 +75,8 @@
                 <!--========== PROFILE ==========-->
                 <section class="profile section" id="profile">
                   <h2 class="section-title"> ABOUT ME </h2>
-                  <p class="profile_description">I'm an engineering minded individual who loves the nature. I'm easygoing and co-operative, although a bit of a perfectionist when it comes to details. Traveling the world has given me spontaneity and has taught me how to compromise. I love creating things with my hands, climbing rocks and listening to my beloved records. </p>
-                  <p class="profile_description">Professionally I have a lot of interest towards different industries (especially the energy sector) and developing it with data-driven solutions. I'm also a visualist, and I would love to create informative graphs to help other people and businesses. </p>
+                  <p class="profile_description">I'm an engineering minded individual who loves the nature. I'm easygoing and co-operative, although a bit of a perfectionist when it comes to details. Traveling the world has given me spontaneity and taught me how to compromise. I love creating things with my hands, climbing rocks and listening to my beloved records. </p>
+                  <p class="profile_description">Professionally I have a lot of interest towards different industries (especially the energy sector) and improving processes with data-driven solutions. I'm also a visualist, and thus I would love to create informative graphs to help other people and businesses. </p>
                 </section>
 
                 <!--========== EDUCATION ==========-->
@@ -275,11 +277,11 @@
                       <span class="experience_company">Upwork Inc.</span>
                       <span class="experience_year"> <i class="education_icon bx bx-calendar"></i>May 2019 –</span>
 
-                      <p class="experience_description">
-                        <li>Code mentoring in CodeBerry programming school</li>
+                      <ul class="experience_list">
+                        <li>Code mentoring in <a id="codeberry" href="https://codeberryschool.com/en/">CodeBerry programming school</a></li>
                         <li>Translations from English to Finnish and vice versa</li>
                         <li>Data entry jobs</li>
-                      </p>
+                      </ul>
                     </div>
                   </div>
 
@@ -293,11 +295,11 @@
                       <span class="experience_company">Jyväskylän Seudun Puhdistamo Oy</span>
                       <span class="experience_location"><i class="bx bx-map home_icon"></i>Jyväskylä, Finland
                       <span class="experience_year"> <i class="education_icon bx bx-calendar"></i> Nov 2019 – Jul 2020</span>
-                      <p class="experience_description">
-                        <li>Development of Energy Production and Consumption in Nenäinniemi wastewater treatment plant</li>
+                      <ul class="experience_list">
+                        <li>Developing energy consumption and production in Nenäinniemi wastewater treatment plant</li>
                         <li>Data analysis about energy (CHP) production and consumption</li>
-                        <li>Future guidelines for applicable technologies</li>
-                      </p>
+                        <li>Creating future guidelines for applicable technologies</li>
+                      </ul>
                     </div>
                   </div>
 
@@ -311,11 +313,11 @@
                       <span class="experience_company">Kemira Oyj</span>
                       <span class="experience_location"><i class="bx bx-map home_icon"></i>Gdansk, Poland
                       <span class="experience_year"> <i class="education_icon bx bx-calendar"></i> May 2019 – Sep 2019</span>
-                      <p class="experience_description">
+                      <ul class="experience_list">
                         <li>Handling chemical orders of Finnish customers</li>
                         <li>Communicating with production plants and transport companies</li>
                         <li>Order to Cash processing in SAP</li>
-                      </p>
+                      </ul>
                     </div>
                   </div>
 
@@ -330,12 +332,12 @@
                       <span class="experience_location"><i class="bx bx-map home_icon"></i>Pori, Finland
                       <span class="experience_year"> <i class="education_icon bx bx-calendar"></i> May 2018 – Aug 2018</span>
                       <span class="experience_year"> <i class="education_icon bx bx-calendar"></i> May 2017 – Aug 2017</span>
-                      <p class="experience_description">
+                      <ul class="experience_list">
                         <li>District heating and cooling data analysis in Microsoft Excel</li>
                         <li>Managing monthly data reports</li>
                         <li>Documenting district heating network in Trimble NIS</li>
                         <li>Testing a new browser based client database system</li>
-                      </p>
+                      </ul>
                     </div>
                   </div>
 
@@ -434,7 +436,7 @@
                   <h2 class="section-title">MY LIFE PHILOSOPHY</h2>
                   <div class="philosophy_container">
                     <p id="philosophy">
-                      ”Learning new skills is never a waste of time.”
+                      “Learning new skills is never a waste of time.”
                     </p>
                   </div>
                 </section>
