Updated skills section

--- a/index.html
+++ b/index.html
@@ -198,6 +198,9 @@
                     </ul>
 
                     <ul class="skills_data">
+		      <li class="skills_name">
+                        PowerBI
+                      </li>
                       <li class="skills_name">
                         HTML
                       </li>
@@ -208,12 +211,17 @@
                         JavaScript
                       </li>
                       <li class="skills_name">
-                        LaTeX
-                      </li>
-                      <li class="skills_name">
                         Office
                       </li>
                     </ul>
+			  
+		      <li id="skills_powerbi">
+                        <span class="skills_circle"></span>
+                        <span class="skills_circle"></span>
+                        <span class="skills_circle"></span>
+                        <span class="empty_circle"></span>
+                        <span class="empty_circle"></span>
+                      </li>
 
                     <ul id="skills_html">
                       <li>
@@ -237,14 +245,6 @@
                         <span class="skills_circle"></span>
                         <span class="empty_circle"></span>
                         <span class="empty_circle"></span>
-                        <span class="empty_circle"></span>
-                      </li>
-
-                      <li id="skills_latex">
-                        <span class="skills_circle"></span>
-                        <span class="skills_circle"></span>
-                        <span class="skills_circle"></span>
-                        <span class="skills_circle"></span>
                         <span class="empty_circle"></span>
                       </li>
 
