Updated education and skills sections

--- a/index.html
+++ b/index.html
@@ -89,6 +89,25 @@
                         <span class="education_line"></span>
                       </div>
                       <div class="education_data bd-grid">
+                        <h3 class="education_title">DATA ENGINEERING COURSES</h3>
+                        <span class="education_studies">dataquest.io</span>
+                        <span class="education_year"> <i class="education_icon bx bx-calendar"></i>2022–2023</span>
+                        <ul class="education_list">
+                          <li><a id="masters" href="https://app.dataquest.io/view_cert/3SE4SV50YDOKO7PSK89X">PostgreSQL for Data Engineering</a></li>
+                          <li><a id="masters" href="https://app.dataquest.io/view_cert/3SE4SV50YDOKO7PSK89X">Intermediate SQL For Data Analysis</a></li>
+                          <li><a id="masters" href="https://app.dataquest.io/view_cert/OKT7FT4326246FGVKWNB">Intermediate Python For Data Engineering</a></li>
+                          <li><a id="masters" href="https://app.dataquest.io/view_cert/97ERWSMVIBL2Q1AAFG7Z">Command Line For Data Science</a></li>
+
+                        </ul>
+                      </div>
+                    </div>
+
+                    <div class="education_content">
+                      <div class="education_time">
+                        <span class="education_rounder"></span>
+                        <span class="education_line"></span>
+                      </div>
+                      <div class="education_data bd-grid">
                         <h3 class="education_title">MASTER OF SCIENCE</h3>
                         <span class="education_studies">Tampere University</span>
                         <span class="education_year"> <i class="education_icon bx bx-calendar"></i>2017–2020</span>
@@ -142,6 +161,9 @@
                         Python
                       </li>
                       <li class="skills_name">
+                        SQL
+                      </li>
+                      <li class="skills_name">
                         C++
                       </li>
                       <li class="skills_name">
@@ -149,9 +171,6 @@
                       </li>
                       <li class="skills_name">
                         Unix shell
-                      </li>
-                      <li class="skills_name">
-                        SQL
                       </li>
                     </ul>
 
@@ -164,7 +183,7 @@
                       <span class="empty_circle"></span>
                       </li>
 
-                      <li id="skills_c++">
+                      <li id="skills_sql">
                         <span class="skills_circle"></span>
                         <span class="skills_circle"></span>
                         <span class="skills_circle"></span>
@@ -180,7 +199,7 @@
                         <span class="empty_circle"></span>
                       </li>
 
-                      <li id="skills_unix">
+                      <li id="skills_c++">
                         <span class="skills_circle"></span>
                         <span class="skills_circle"></span>
                         <span class="skills_circle"></span>
@@ -188,10 +207,10 @@
                         <span class="empty_circle"></span>
                       </li>
 
-                      <li id="SQL">
+                      <li id="skills_unix">
                         <span class="skills_circle"></span>
                         <span class="skills_circle"></span>
-                        <span class="empty_circle"></span>
+                        <span class="skills_circle"></span>
                         <span class="empty_circle"></span>
                         <span class="empty_circle"></span>
                       </li>
