Added one more data course certificate

--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
                         <span class="education_studies">dataquest.io</span>
                         <span class="education_year"> <i class="education_icon bx bx-calendar"></i>2022–2023</span>
                         <ul class="education_list">
-                          <li><a id="masters" href="https://app.dataquest.io/view_cert/3SE4SV50YDOKO7PSK89X">PostgreSQL for Data Engineering</a></li>
+                        
+                          <li><a id="masters" href="https://app.dataquest.io/view_cert/GCPXJS0ENIGTSBJCIG6A">Data Pipelines</a></li>
+                          <li><a id="masters" href="https://app.dataquest.io/view_cert/3SE4SV50YDOKO7PSK89X">PostgreSQL For Data Engineering</a></li>
                           <li><a id="masters" href="https://app.dataquest.io/view_cert/3SE4SV50YDOKO7PSK89X">Intermediate SQL For Data Analysis</a></li>
                           <li><a id="masters" href="https://app.dataquest.io/view_cert/OKT7FT4326246FGVKWNB">Intermediate Python For Data Engineering</a></li>
                           <li><a id="masters" href="https://app.dataquest.io/view_cert/97ERWSMVIBL2Q1AAFG7Z">Command Line For Data Science</a></li>
